Tue Jan 10 12:02:21 1995  Steve Haflich  <smh@vapor>

	* fi-version.el
	Fixed lemacs vs xemacs conditionalization.

	* fi-lep.el
	expand-file-name in fi:bug-report when listing emacs-lisp files.

Mon Jan  9 15:45:28 1995  Steve Haflich  <smh@vapor>

*******************************************************************************
2.0.16
*******************************************************************************

	Changed references from "lemacs" to "xemacs" in both file names and
	in the variable fi::emacs-type, which now takes one of the values
	{emacs18, emacs19, xemacs19, epoch}.  Epoch presumably still works but
	is little tested recently.

	* fi-lemacs.el renamed fi-xemacs.el
	* fi-leep-lemacs.el renamed fi-leep-xemacs.el

	* Makefile
	Filename changes.

	* fi-site-init.el
	Filename changes.
	fi::emacs-type changes.
	Version 2.0.16

	* fi-emacs19.el
	* fi-xemacs.el
	Added missing fi:comment-form and fi:uncomment-form.
	Removed useless customizations on fi::emacs-type which is already
	implicit in the selection of these files.

	* fi-version.el
	* fi-subproc.el
	* fi-keys.el
	* fi-subproc.el
	* fi-utils.el
	fi::emacs-type changes.

Fri Jan  6 16:40:48 1995  Steve Haflich  <smh@vapor>

	* Makefile
	Add fi-emacs18.el to the Makefile.

	* fi-emacs18.el New file.

	* fi-emacs18.el
	* fi-emacs19.el
	* fi-lemacs.el
	New function fi::defontify-string which receives buffer-substrings
	passed from Emacs to CL.  The only nontrivial version is for FSF,
	which needs to suppress font info the printer preserves by default.

	* fi-lze.el
	Change to call fi::defontify-string instead of stripping font info
	inline.

	* fi-utils.el
	Call fi::defontify-string from fi::get-symbol-at-point.

	* fi-modes.el
	Fix format string typo.

Thu Dec  8 14:16:49 1994  Steve Haflich  (smh@vapor)

	* fi-site-load.el renamed to
	* fi-build.el
	so all file names are distinct within the impoverished acuities
	of the Windows file system.

	* fi-site-init.el
	Version 2.0.15.